app/styles/core/material.scss
/* ============================================== */
/* ============= material overrides ============= */
/* ============================================== */

.mat-paginator-outer-container {
    height: vw(60) !important;
}

mat-card {
    border-radius: 0px !important;
    width: vw(300);
    margin-bottom: unset;
    margin: vw(10);
    min-width: vw(250);
    padding: vw(16) vw(8) !important;
    border-radius: vw(4) !important;
}

mat-form-field {
    padding: vw(3);
}

mat-toolbar {
    justify-content: space-between;
}

mat-row {
    cursor: pointer;
}

.mat-drawer-container {
    position: unset !important;
}

.mat-bottom-sheet-container {
    padding: 0 !important;
}

.mat-bottom-sheet-container-large {
    min-width: 100% !important;
    height: 85vh;
}

.mat-form-field-label-wrapper {
    font-size: vw(16);
    overflow: hidden;
    pointer-events: none;
}

.mat-button {
    font-size: vw(16) !important;
}

mat-row {
    padding: vw(8) 0;
}

.mat-toolbar {
    min-height: $headerSize !important;
    height: $headerSize !important;
}

.mat-toolbar-row {
    min-height: $headerSize !important;
    height: $headerSize !important;
}

.mat-cell {
    padding-right: vw(16);

    @include media("<=desktop") {
        &:last-of-type {
            flex: 0.5;
            padding-right: 0 !important;
        }
    }
}

.mat-paginator-page-size {
    @include media("<=desktop") {
        display: none !important;
    }
}

.mat-simple-snackbar {
    font-size: vw(18);

    @include media(">=desktop") {
        font-size: vw(16);
    }
}

.mat-card-title {
    line-height: vw(34);
}

.mat-icon-button {
    width: vw(40) !important;
    height: vw(40) !important;
}

.mat-icon {
    width: vw(34) !important;
    height: vw(34) !important;

    @include media(">=desktop") {
        width: vw(24) !important;
        height: vw(24) !important;
    }
}

.material-icons {
    font-size: vw(34) !important;

    @include media(">=desktop") {
        font-size: vw(24) !important;
    }
}

.mat-fab {
    width: vw(56) !important;
    height: vw(56) !important;
}

.mat-fab .mat-button-wrapper {
    padding: vw(6) 0 !important;
    line-height: vw(24) !important;
}

mat-icon-button i,
.mat-icon-button .mat-icon {
    line-height: vw(34) !important;

    @include media(">=desktop") {
        font-size: vw(24) !important;
    }
}

.mat-icon-button {
    line-height: vw(40) !important;
}

.mat-slide-toggle {
    height: vw(34) !important;
    line-height: vw(34) !important;

    @include media(">=desktop") {
        height: vw(24) !important;
        line-height: vw(24) !important;
    }
}

.mat-slide-toggle-thumb {
    height: vw(20) !important;
    width: vw(20) !important;
}

.mat-slide-toggle-bar {
    width: vw(36) !important;
    height: vw(14) !important;
    border-radius: vw(8) !important;
}

.mat-slide-toggle .mat-slide-toggle-ripple {
    position: absolute;
    top: calc(50% - vw(20)) !important;
    left: calc(50% - vw(20)) !important;
    height: vw(40) !important;
    width: vw(40) !important;
    z-index: 1;
    pointer-events: none;
}

.mat-slide-toggle.mat-checked .mat-slide-toggle-thumb-container {
    transform: translate3d(vw(16), 0, 0) !important;
}

.mat-slide-toggle-thumb-container {
    width: vw(20) !important;
    height: vw(20) !important;
    top: vw(-3) !important;
}

mat-header-row {
    min-height: vw(56) !important;
}

.mat-list-base .mat-list-item,
.mat-list-base .mat-list-option {
    height: vw(48) !important;
}

.mat-list-base .mat-list-item .mat-list-item-content,
.mat-list-base .mat-list-option .mat-list-item-content {
    padding: 0 vw(16) !important;
}

.mat-chip.mat-standard-chip {
    .darkMode & {
        background-color: mat-contrast($app-background, 50);
    }
}

.mat-standard-chip .mat-chip-remove,
.mat-standard-chip .mat-chip-trailing-icon {
    width: vw(18) !important;
    height: vw(18) !important;
}

.mat-standard-chip .mat-chip-remove.mat-icon,
.mat-standard-chip .mat-chip-remove .mat-icon {
    width: vw(18) !important;
    height: vw(18) !important;
    font-size: vw(18) !important;
}

.cdk-virtual-scroll-viewport {
    background-color: mat-color($app-background, 50);

    .darkMode & {
        background-color: mat-contrast($app-background, 50);
    }
}

